--- a/ohmyfood/styles/base/_settings.scss
+++ b/ohmyfood/styles/base/_settings.scss
@@ -16,40 +16,126 @@ a ol li {
     text-decoration: none;
     list-style: none;
 }
+
+  
 body {
     font-family: $font-txt;
 }
 
-.loader {
-    position: absolute;
-    margin:auto;
-    top:0;
-    left:0;
-    right:0;
-    bottom:0;
-    width: 24px;
-    height: 24px;
-    display: grid;
-    animation: spin 3s infinite;
-    &:before, &:after {
-        content: "";
-        grid-area: 1/1;
-        border: 3.8px solid;
-        border-radius: 50%;
-        border-color: $color-secondary $color-tertiary $color-primary $color-tertiary;
-        mix-blend-mode: darken;
-        animation: spin 3s infinite linear;
+.loaderWrap  {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: whitesmoke;
+    opacity: 0.6;
+    z-index: 1000;
+}
+.loader  {
+  
+  overflow: auto;
+  margin: auto;
+  position: absolute;
+  z-index: 1001;
+  top: 0; left: 0; bottom: 0; right: 0;
+    animation: rotate 1s infinite;
+    animation-delay: 3s;  
+    height: 50px;
+    width: 50px;
+    &:before,
+    &:after {   
+      border-radius: 50%;
+      content: '';
+      display: block;
+      height: 20px;  
+      width: 20px;
+    }
+
+    &:before {
+      animation: ball1 1s infinite;  
+      background-color: $color-secondary;
+      box-shadow: 30px 0 0 #f8b334;
+      margin-bottom: 10px;
     }
     &:after {
-        border-color: $color-tertiary $color-secondary $color-tertiary $color-secondary;
-        animation-direction: reverse;
+      animation: ball2 1s infinite; 
+      background-color: #00a096;
+      box-shadow: 30px 0 0 $color-tertiary;
     }
-    
 }
-
-@keyframes spin {
+  
+  
+  @keyframes rotate {
+    0% { 
+      -webkit-transform: rotate(0deg) scale(0.8); 
+      -moz-transform: rotate(0deg) scale(0.8);
+    }
+    50% { 
+      -webkit-transform: rotate(360deg) scale(1.2); 
+      -moz-transform: rotate(360deg) scale(1.2);
+    }
+    100% { 
+      -webkit-transform: rotate(720deg) scale(0.8); 
+      -moz-transform: rotate(720deg) scale(0.8);
+    }
+  }
+  
+  @keyframes ball1 {
+    0% {
+      box-shadow: 30px 0 0 $color-primary;
+    }
+    50% {
+      box-shadow: 0 0 0 $color-primary;
+      margin-bottom: 0;
+      -webkit-transform: translate(15px,15px);
+      -moz-transform: translate(15px, 15px);
+    }
     100% {
-        transform: rotate(1turn);
+      box-shadow: 30px 0 0 $color-primary;
+      margin-bottom: 10px;
+    }
+  }
+  
+  @keyframes ball2 {
+    0% {
+      box-shadow: 30px 0 0 $color-tertiary;
+    }
+    50% {
+      box-shadow: 0 0 0 $color-tertiary;
+      margin-top: -20px;
+      -webkit-transform: translate(15px,15px);
+      -moz-transform: translate(15px, 15px);
+    }
+    100% {
+      box-shadow: 30px 0 0 $color-tertiary;
+      margin-top: 0;
+    }
+  }
+
+#loader-block {
+    -moz-animation: hideLoader 0s ease-in 3s forwards;
+    /* Firefox */
+    -webkit-animation: hideLoader 0s ease-in 3s forwards;
+    /* Safari and Chrome */
+    -o-animation: hideLoader 0s ease-in 3s forwards;
+    /* Opera */
+    animation: hideLoader 0s ease-in 3s forwards;
+    -webkit-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+}
+@keyframes hideLoader {
+    to {
+        width:0;
+        height:0;
+        overflow:hidden;
+    }
+}
+@-webkit-keyframes hideLoader {
+    to {
+        width:0;
+        height:0;
+        visibility:hidden;
     }
 }
 
