--- a/ohmyfood/styles/layout/_header.scss
+++ b/ohmyfood/styles/layout/_header.scss
@@ -1,5 +1,6 @@
-header {
-    @include center;
+.header {
+    margin:0 auto;
+    text-align:center;
     h1 {
         font-family: $font-title-logo;
     }
