--- a/ohmyfood/styles/base/_settings.scss
+++ b/ohmyfood/styles/base/_settings.scss
@@ -11,16 +11,105 @@ $color-bg-lightgrey: #FAFAFA;
     justify-content: center;
     align-items: center;
 }
+@mixin shadowElement {
+    box-shadow: 0px 0px 10px 0px rgb(0 0 0 / 60%);
+}
+* {
+    margin: 0;
+    padding: 0;
+}
 
 a ol li {
     text-decoration: none;
     list-style: none;
 }
 
+ul {
+    margin-block: 0;
+}
+
   
 body {
     font-family: $font-txt;
 }
+
+.icon {
+    fill: transparent;
+    stroke: lightgrey;
+    stroke-width: 5;
+    cursor: pointer;
+    position: relative;
+  
+    svg {
+      overflow: visible;
+      width: 30px;
+    }
+  
+    path {
+      stroke-dashoffset: 0;
+      transform-origin: center;
+    }
+  
+    .heart-background {
+      position: absolute;
+      left: 0;
+      right: 0;
+      z-index: -1;
+      stroke: none;
+    }
+  
+    .heart-main:hover path {
+      animation: stroke-animation 2s ease-in-out forwards;
+    }
+  
+    .heart-main:hover ~ .heart-background path {
+      animation: fade-animation 2s ease-in-out forwards;
+    }
+  }
+  
+  @keyframes stroke-animation {
+    0% {
+      stroke-dashoffset: 0;
+    }
+    30% {
+      stroke-dashoffset: 155;
+    }
+    60% {
+      stroke-dashoffset: 310;
+      fill: transparent;
+      transform: scale(1);
+    }
+    80% {
+      fill: $color-secondary;
+      transform: scale(1.1);
+    }
+    90% {
+      transform: scale(1);
+    }
+    100% {
+      stroke-dashoffset: 310;
+      fill: $color-secondary;
+  }
+}
+  
+  @keyframes fade-animation {
+    70% {
+      fill: transparent;
+      transform: scale(1);
+    }
+    80% {
+      fill: $color-secondary;
+      transform: scale(1.1);
+      opacity: 1;
+    }
+    90% {
+      opacity: 1;
+    }
+    100% {
+      transform: scale(2.5);
+      opacity: 0;
+    }
+  }
 
 
 
