--- a/ohmyfood/styles/pages/_homepage.scss
+++ b/ohmyfood/styles/pages/_homepage.scss
@@ -114,3 +114,177 @@
         visibility:hidden;
     }
 }
+
+header {
+    padding: 15px;
+}
+
+.location {
+    @include center;
+    padding: 30px;
+    background-color: $color-bg-grey;
+    gap:5px;
+    h2 {
+        font-family: $font-txt;
+    }
+}
+
+.about {
+    text-align: center;
+    background: $color-bg-lightgrey;
+    padding: 1.5rem;
+    height: 250px;
+    .about__subtitle {
+        font-weight:300;
+        margin: 2.3rem 0;
+    }
+    .about__btn {
+        color:white;
+        font-size: 1.1rem;
+        font-weight: 500;
+        padding: 1rem;
+        margin-top:50px;
+        border-radius:30px;
+        cursor: pointer;
+        transition-duration: 0.25s;
+        box-shadow: 0.25rem 0.25rem 10px rgb(0 0 0 / 25%);
+        background: linear-gradient(180deg, $color-secondary 0%, $color-primary 90%);
+        &:hover {
+            @include shadowElement;
+            background: lighten($color-secondary,1%);
+            transition: 1s ease-in-out;
+        }
+    }
+}
+
+.step {
+    @include center;
+    .step__wrapper {
+        margin-top: 50px;  
+    }
+}
+.step__items { 
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    counter-reset: compteListe;
+}
+
+.step__items__item {
+    padding: 1.5rem;
+    margin: 1rem 0 1rem 0.75rem;
+    box-shadow: 0.25rem 0.25rem 0.5rem rgb(0 0 0 / 13%);
+    border-radius: 1.25rem;
+    background-color: #f6f6f6;
+    display: flex;
+    position: relative;
+    &:before {
+        @include center;
+        color:white;
+        counter-increment: compteListe 1;
+        content: counter(compteListe) " ";
+        background: $color-primary;
+        width: 30px;
+        height: 30px;
+        border-radius: 50%;
+        top:0;
+        left:0;
+        position: absolute;
+        transform: translate(-50%, 50%);
+    }
+    &:hover {
+        @include shadowElement;
+        
+    }
+    .step__icon {
+        margin-right: 10px;
+    }
+}
+
+.restaurants {
+    @include center;
+    margin: 50px auto 0 auto;
+    background: $color-bg-lightgrey;
+
+    .container {
+        max-width: 1280px;
+        margin: auto;
+        padding-bottom: 50px;
+        position: relative;
+        .restaurants__title {
+            margin:20px auto;
+        }
+        .cards {
+
+            @media screen and (min-width: 769px) {
+                display: grid;
+                grid-template-columns: 1fr 1fr;
+                gap: 30px;
+                
+            }
+            display: grid;
+            grid-template-columns: repeat(1, 1fr);
+            column-gap: 2rem;
+            row-gap: 2rem;
+           
+            .card {
+                background-color: white;
+                border-radius: 1rem;
+                position: relative;
+                text-decoration: none;
+                color: inherit;
+                display: block;
+                box-shadow: 0 0 10px 0 rgb(0 0 0 / 30%);
+                transition: 0.2s;
+            }
+            .card__img {
+                height: 12rem;
+                width: 100%;
+                border:0px solid transparent;
+                border-radius: 1rem 1rem 0 0;
+                box-shadow: none;
+                object-fit: cover;
+            }
+            .card__badge {
+                background-color: $color-tertiary;
+                color: #1b6150;
+                padding: 0.5rem;
+                border-radius: 0.125rem;
+                position: absolute;
+                top: 1rem;
+                right: 0.75rem;
+            }
+            .card__footer {
+                padding: 1rem;
+                position: relative;
+                display: flex;
+                align-items: center;
+            }
+            .card__content {
+                flex: 1;
+            }
+            .card__title {
+                margin: 0;
+                margin-bottom: 0.25rem;
+            }
+        }
+    }
+    
+}
+
+.step__items {
+    @media screen and (min-width: 769px) {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr ;
+        gap: 30px;
+        .step__title {
+            @include center;
+        }
+    }
+    
+}
+
+
+
+
+
