--- a/ohmyfood/styles/pages/_menu.scss
+++ b/ohmyfood/styles/pages/_menu.scss
@@ -52,31 +52,21 @@
         background: linear-gradient(0deg, #9356DC 0%, #FF79DA 100%);
     }
 }
-.menu__like {
-    transition-duration: 0.25s;
-    background-color: #f6f6f6;
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    mix-blend-mode: lighten;
-}
+
 .submenus {
     display: grid;
+    
 }
 .submenu {
     max-width: 100%;
     overflow: hidden;
-    padding: 0 1rem;
+    padding: 8rem 1rem;
 }
 .submenu__title {
     text-transform: uppercase;
     position: relative;
     padding-bottom: 0.5rem;
+    margin: -75px 0;
     font-weight: normal;
     &:after {
         content: "";
@@ -90,19 +80,44 @@
     }
 }
 .menuItem {
-    background-color: green;
+    
     padding: 1rem;
     display: flex;
     border-radius: 0.75rem;
-    margin: 1rem 0;
+    margin: 20px 0;
     box-shadow: 0.25rem 0.25rem 1rem rgb(0 0 0 / 10%);
     overflow: hidden;
     cursor: pointer;
-    animation: itemAppear 0.6s;
-    animation-timing-function: cubic-bezier(0.5, 1.58, 0.34, 0.82);
-    animation-fill-mode: both;
+	animation: itemDisplay 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) forwards;
     transform: scale(0);
     max-width: 100%;
+}
+.delay-0 {
+    animation-delay: 0s;
+}
+.delay-1 {
+    animation-delay: 1s;
+}
+.delay-2 {
+    animation-delay: 2s;
+}
+.delay-3 {
+    animation-delay: 3s;
+}
+.delay-4 {
+    animation-delay: 4s;
+}
+.delay-5 {
+    animation-delay: 5s;
+}
+.delay-6 {
+    animation-delay: 6s;
+}
+.delay-7 {
+    animation-delay: 7s;
+}
+.delay-8 {
+    animation-delay: 8s;
 }
 
 .menuItem__header {
@@ -170,3 +185,15 @@
     box-shadow: 0.25rem 0.25rem 10px rgb(0 0 0 / 25%);
     cursor: pointer;
 }
+
+
+  @keyframes itemDisplay {
+    0% {
+      -webkit-transform: translateY(0);
+              transform: translateY(0);
+    }
+    100% {
+      -webkit-transform: translateY(100px);
+              transform: translateY(100px);
+    }
+  }
